<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        <parent>
                <artifactId>gs-collections-parent</artifactId>
                <groupId>com.goldmansachs</groupId>
                <version>7.0.4-SNAPSHOT</version>
        </parent>
        <modelVersion>4.0.0</modelVersion>
        <artifactId>unit-tests</artifactId>
        <name>Goldman Sachs Collections Unit Test Suite</name>
        <properties>
                <maven.deploy.skip>true</maven.deploy.skip>
                <maven.compiler.source>17</maven.compiler.source>
                <maven.compiler.target>17</maven.compiler.target>
                <maven.compiler.release>17</maven.compiler.release>
        </properties>
        <dependencies>
                <dependency>
                        <groupId>com.goldmansachs</groupId>
                        <artifactId>gs-collections-api</artifactId>
                        <version>${project.version}</version>
                        <scope>test</scope>
                </dependency>
                <dependency>
                        <groupId>com.goldmansachs</groupId>
                        <artifactId>gs-collections</artifactId>
                        <version>${project.version}</version>
                        <scope>test</scope>
                </dependency>
                <dependency>
                        <groupId>com.goldmansachs</groupId>
                        <artifactId>gs-collections-testutils</artifactId>
                        <version>${project.version}</version>
                        <scope>test</scope>
                </dependency>
                <dependency>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-api</artifactId>
                        <scope>test</scope>
                </dependency>
                <dependency>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-nop</artifactId>
                        <scope>test</scope>
                </dependency>
                <dependency>
                        <groupId>net.jcip</groupId>
                        <artifactId>jcip-annotations</artifactId>
                        <scope>test</scope>
                        <optional>true</optional>
                </dependency>
                <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter</artifactId>
                        <version>5.10.3</version>
                        <scope>test</scope>
                </dependency>
        </dependencies>
        <build>
                <plugins>
                        <plugin>
                                <groupId>com.goldmansachs</groupId>
                                <artifactId>gs-collections-code-generator-maven-plugin</artifactId>
                                <version>7.0.4-SNAPSHOT</version>
                                <executions>
                                        <execution>
                                                <id>list</id>
                                                <phase>generate-test-sources</phase>
                                                <goals>
                                                        <goal>generate</goal>
                                                </goals>
                                                <configuration>
                                                        <templateDirectory>test</templateDirectory>
                                                </configuration>
                                        </execution>
                                </executions>
                        </plugin>
                        <plugin>
                                <artifactId>maven-compiler-plugin</artifactId>
                                <configuration>
                                        <fork>true</fork>
                                        <maxmem>2048m</maxmem>
                                        <verbose>true</verbose>
                                        <release>17</release>
                                </configuration>
                        </plugin>
                        <plugin>
                                <artifactId>maven-surefire-plugin</artifactId>
                        </plugin>
                        <plugin>
                                <artifactId>maven-source-plugin</artifactId>
                        </plugin>
                        <plugin>
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>sonar-maven-plugin</artifactId>
                        </plugin>
                        <plugin>
                                <artifactId>maven-checkstyle-plugin</artifactId>
                        </plugin>
                        <plugin>
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>findbugs-maven-plugin</artifactId>
                        </plugin>
                        <plugin>
                                <artifactId>maven-enforcer-plugin</artifactId>
                                <executions>
                                        <execution>
                                                <id>enforce</id>
                                                <configuration>
                                                        <rules>
                                                                <DependencyConvergence/>
                                                                <requirePluginVersions>
                                                                        <unCheckedPluginList>com.goldmansachs:gs-collections-code-generator-maven-plugin
                                    </unCheckedPluginList>
                                                                </requirePluginVersions>
                                                                <requireJavaVersion>
                                                                        <version>17</version>
                                                                </requireJavaVersion>
                                                                <requireMavenVersion>
                                                                        <version>3.0.2</version>
                                                                </requireMavenVersion>
                                                        </rules>
                                                </configuration>
                                                <goals>
                                                        <goal>enforce</goal>
                                                </goals>
                                        </execution>
                                </executions>
                        </plugin>
                        <plugin>
                                <artifactId>maven-jar-plugin</artifactId>
                                <executions>
                                        <execution>
                                                <goals>
                                                        <goal>test-jar</goal>
                                                </goals>
                                        </execution>
                                </executions>
                        </plugin>
                </plugins>
        </build>
        <profiles>
                <profile>
                        <id>clover</id>
                        <build>
                                <plugins>
                                        <plugin>
                                                <groupId>com.atlassian.maven.plugins</groupId>
                                                <artifactId>maven-clover2-plugin</artifactId>
                                                <version>${clover.version}</version>
                                                <configuration>
                                                        <licenseLocation>${clover.license}</licenseLocation>
                                                        <contextFilters>@deprecated</contextFilters>
                                                        <generateHistorical>true</generateHistorical>
                                                        <historyDir>${user.home}/clover/${project.artifactId}</historyDir>
                                                        <includesAllSourceRoots>true</includesAllSourceRoots>
                                                        <instrumentLambda>block</instrumentLambda>
                                                </configuration>
                                                <executions>
                                                        <execution>
                                                                <id>setup</id>
                                                                <phase>process-test-sources</phase>
                                                                <goals>
                                                                        <goal>setup</goal>
                                                                </goals>
                                                        </execution>
                                                </executions>
                                        </plugin>
                                </plugins>
                        </build>
                </profile>
        </profiles>
</project>
